adding menu item

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link href="css/stylish-portfolio.css" rel="stylesheet">
-    <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="css/sims.css" rel="stylesheet">
 
@@ -42,6 +42,9 @@
             </li>
             <li>
                 <a href="#external-resources" onclick = $("#menu-close").click(); >External resources</a>
+            </li>
+            <li>
+                <a href="#toolkit" onclick = $("#menu-close").click(); >Toolkit</a>
             </li>
             <li>
                 <a href="#feedback" onclick = $("#menu-close").click(); >Feedback</a>
@@ -231,7 +234,8 @@
                       <div class="col-lg-10 col-lg-offset-1 text-center">
                           <h2>Feedback</h2>
                           <div class="row">
-                            feedback section
+                            <p>This site is in the early stages of development. Please have patience as we add content and features.</p>
+                            <p>Suggestions for improvement are welcome and shall inform the periodic update of the site and tools. For technical issues with the website please send an <a href="mailto:daniel.joseph@redcross.org">email</a>.</p>
                           </div>
                           <!-- /.row (nested) -->
 
