--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title></title>
+    <title>SIMS</title>
 
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link href="css/stylish-portfolio.css" rel="stylesheet">
