--- a/css/sims.css
+++ b/css/sims.css
@@ -1,6 +1,3 @@
-.card {
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-}
 .no-margin {
   margin: 0;
 }
@@ -9,6 +6,7 @@
   box-sizing: border-box;
   border-radius: 2px;
   background-clip: padding-box;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
 .card img {
@@ -29,6 +27,16 @@
   background: #79CFDF;
 }
 
+.gallery-thumb {
+  cursor: pointer;
+  margin: 12px;
+  padding: 6px;
+  height: 100px;
+  width: 100px;
+  display: inline-block;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+
+}
 
 #toolkit ul {
   list-style: none;
