--- a/css/sims.css
+++ b/css/sims.css
@@ -23,7 +23,7 @@
 }
 
 .card {
-  margin-top: 10px;
+  margin-top: 20px;
   box-sizing: border-box;
   border-radius: 2px;
   background-clip: padding-box;
@@ -36,6 +36,9 @@
 }
 .card-logo {
   padding: 12px 12px 6px 12px;
+}
+.resources-card img {
+  max-height: none;
 }
 .card-text {
   padding: 6px 12px 12px 12px;
