--- a/css/sims.css
+++ b/css/sims.css
@@ -1,3 +1,27 @@
+body {
+   background-color: #DDE8E8;
+   font-size:small;
+}
+
+.front-page-font-outline{
+   text-shadow: -0.1em 0 white, 0 0.1em white, 0.1em 0 white, 0 -0.1em white;
+}
+
+.bg-white {
+  background: white; /*for old browsers*/
+}
+
+
+.btn{
+    border-radius: 5px;
+}
+
+h2{
+    padding: 20px;
+    font-family: 'PT Sans', sans-serif;
+    font-weight: 700;
+}
+
 #browser-warning {
   width: 100%;
   height: 30px;
@@ -10,7 +34,7 @@
 }
 
 .intro {
-    background: url(../img/intro-banner.png) no-repeat bottom center scroll;
+    background: url(../img/front-banner_2.png) no-repeat bottom center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -27,24 +51,46 @@
 
 .card {
   margin-top: 20px;
-  box-sizing: border-box;
-  border-radius: 2px;
+  border-radius: 5px;
+  background-color:white;
   background-clip: padding-box;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  overflow:hidden;
+  height:300px;
+  max-width:300px;
+  /*  box-sizing: border-box;
+      box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);*/
 }
 
-.card img {
-  max-width: 100%;
-  max-height: 100px;
-}
 .card-logo {
-  padding: 12px 12px 6px 12px;
+  align-items: center;
+  justify-content: center;
+  display:flex;
+  height:100px;
 }
+
+.external-card-images {
+   padding: 12px 12px 6px 12px;
+}
+
+.resize{
+   height:100px;
+}
+
+.internal-card-images {
+   width:100%;
+   height: 150px;
+   max-height:none;
+   object-fit:cover;
+   overflow:hidden;
+   padding:0;
+   margin:0;
+}
+
 .resources-card img {
   max-height: none;
 }
 .card-text {
-  padding: 6px 12px 12px 12px;
+  padding: 15px;
 }
 
 .card-logo.dhn {
@@ -73,12 +119,14 @@
   padding: 14px 0px;
 }
 .toolkit-card {
+  background-color: #DDE8E8;
   margin: 6px;
   border-radius: 2px;
   display: inline-block;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  /*box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);*/
 }
 .toolkit-card .color {
+  border-radius: 2px 0;
   padding: 8px;
   display: inline-block;
   background-color: #d7d7d8;
