Change file name (header)

--- a/css/sims.css
+++ b/css/sims.css
@@ -34,7 +34,7 @@ h2{
 }
 
 .intro {
-    background: url(../img/front-banner_2.png) no-repeat bottom center scroll;
+    background: url(../img/front-banner.png) no-repeat bottom center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
