Testing Git synchronization

--- a/css/sims.css
+++ b/css/sims.css
@@ -2,7 +2,7 @@ body {
    background-color: #DDE8E8;
    font-size:small;
 }
-
+/*testing comment*/
 .front-page-font-outline{
    text-shadow: -0.1em 0 white, 0 0.1em white, 0.1em 0 white, 0 -0.1em white;
 }
