--- a/css/sims.css
+++ b/css/sims.css
@@ -1,6 +1,6 @@
 body {
-   background-color: #DDE8E8;
-   font-size:small;
+   background-color: #1a1a1a;
+   color:white;
 }
 /*testing comment*/
 .front-page-font-outline{
@@ -8,7 +8,8 @@ body {
 }
 
 .bg-white {
-  background: white; /*for old browsers*/
+  background: white;
+  color:black;
 }
 
 
@@ -18,8 +19,10 @@ body {
 
 h2{
     padding: 20px;
-    font-family: 'PT Sans', sans-serif;
-    font-weight: 700;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: lighter;
+    font-size:2.5em;
+    color:crimson;
 }
 
 #browser-warning {
@@ -57,6 +60,7 @@ h2{
   overflow:hidden;
   min-height:23em;
   max-width:23em;
+  color:black;
   /*  box-sizing: border-box;
       box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);*/
 }
