changed document section to be a list centered and aligned

--- a/css/sims.css
+++ b/css/sims.css
@@ -126,7 +126,7 @@ h2{
   background-color: #DDE8E8;
   margin: 6px;
   border-radius: 2px;
-  display: inline-block;
+  text-align:left;
   /*box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);*/
 }
 .toolkit-card .color {
