--- a/css/sims.css
+++ b/css/sims.css
@@ -92,6 +92,7 @@ h2{
 
 .external-card-images {
    padding: 12px 12px 6px 12px;
+   max-height: 100px;
 }
 
 .internal-card-images {
@@ -101,7 +102,7 @@ h2{
    object-fit:cover;
    overflow:hidden;
    padding:0;
-   margin:0;
+   margin:0;        
 }
 
 .resources-card img {
@@ -111,15 +112,21 @@ h2{
   padding: 15px;
 }
 
-.card-logo-fit-size{
-    max-height: 100px;
-    max-width: 100%;
-}
+@supports (-webkit-appearance:none) {
+    .card-logo-fit-size {
+        max-width: 100%;
+    }
+}      
+
 .card-logo.dhn {
   background: #B3130B;
 }
 .card-logo.hid {
   background: #79CFDF;
+}
+
+.btn-dark{
+    background-color: rgba(200,0,0,0.7);
 }
 
 .gallery-thumb {
