--- a/css/sims.css
+++ b/css/sims.css
@@ -71,24 +71,39 @@ p{
 
 
 /*------------------dashboard css code*/
-div#map svg text{
-    font-size: 0.9em;
-    font-family: Verdana;
-}
 
 #map {
     /*following 3 lines for block centering*/
     text-align: center;
     overflow:hidden; 
+    padding-bottom:30px;
+}
+#reset-line{
+    padding-top:0;
+    text-align:left;
 }
 
-.dc-chart g.activations path {
-    stroke: #fff !important;
+#table{
+    font-family: 'Lato', sans-serif;
+    display:block;
+    max-height:30em;
+    overflow:auto;
+    padding-bottom:1em;
+    border-top: 1px solid #ddd;
 }
 
-.reset-map :active{
-    outline:none;
-    color:black;
+.table tbody tr td{
+    height:100%;
+    height:4em;
+}
+
+#loading-button{
+    width:100%;
+    height:100%;
+    text-align:center;
+    z-index:9999;
+    padding:20px;
+    position: absolute;
 }
 
 /*------------------cards css code*/
