--- a/css/sims.css
+++ b/css/sims.css
@@ -72,15 +72,33 @@ p{
 
 /*------------------dashboard css code*/
 
+body{
+    width:100%;
+}
+
+p{
+    font-family: 'Oxygen', sans-serif;
+    align-content:center;
+    text-align:center;
+    padding:10px;
+}
+
+.hide-overflow {
+    overflow:auto;
+    height: 610px;
+    border: 1px #ddd solid;
+}
+
 #map {
     /*following 3 lines for block centering*/
     text-align: center;
     overflow:hidden; 
-    padding-bottom:30px;
+    padding-right:15px;
 }
+
 #reset-line{
     padding-top:0;
-    text-align:left;
+    text-align:center;
 }
 
 #table{
@@ -97,15 +115,6 @@ p{
     height:4em;
 }
 
-#loading-button{
-    width:100%;
-    height:100%;
-    text-align:center;
-    z-index:9999;
-    padding:20px;
-    position: absolute;
-}
-
 /*------------------cards css code*/
 
 .no-margin {
@@ -114,6 +123,10 @@ p{
 
 .section-spacer {
   height: 24px;
+}
+
+section {
+    margin:0px;
 }
 
 .card {
