- reduced whitespace in cards (changed responsiveness to work for small devices too) - changed Oxygen font to Open-Sans - changed dark background to be less dark

--- a/css/sims.css
+++ b/css/sims.css
@@ -9,7 +9,7 @@ body {
 }
 
 .bg-black {
-    background-color: #1a1a1a;
+    background-color: #333333;
     color: white;
 }
 
@@ -80,7 +80,7 @@ body {
 }
 
 p {
-    font-family: 'Oxygen', sans-serif;
+    font-family:  'Open Sans', sans-serif;
     align-content: center;
     text-align: center;
     padding: 10px;
@@ -120,13 +120,9 @@ p {
 
 /*------------------cards css code*/
 
-#internal-resources div.col-sm-4, #external-resources div.col-sm-4 {
+#internal-resources div.col-xs-12, #external-resources div.col-xs-12{
     display: flex;
     justify-content: center;
-}
-
-#external-resources .card {
-    min-height: 27em;
 }
 
 .no-margin {
@@ -147,12 +143,16 @@ section {
     background-color: white;
     background-clip: padding-box;
     overflow: hidden;
-    min-height: 25em;
-    max-width: 23em;
+    min-height: 22em;
+    max-width:23em;
     color: black;
     font-family: 'Open Sans', sans-serif;
     /*  box-sizing: border-box;
       box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);*/
+}
+
+#external-resources .card {
+    min-height:21em;
 }
 
 .card-logo {
