--- a/css/sims.css
+++ b/css/sims.css
@@ -40,7 +40,7 @@ h2 {
 
 .intro {
     background-color: #1a1a1a;
-    background: url(../img/front-banner.png) no-repeat bottom center scroll;
+    background: url(../img/front-banner.jpg) no-repeat bottom center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
