change metadata for network

--- a/app/_layouts/person.html
+++ b/app/_layouts/person.html
@@ -6,7 +6,7 @@ layout: default
   <div class="row justify-content-center">
     <div class="col-10">
       <h2>Who is {{ page.name }}?</h2>
-      <h4>{{ page.position }}, {{ page.ns }}</h4>
+      <h4>{{ page.position }}, {{ page.org }}</h4>
       <p> {{ content }} </p>
     </div>
   </div>
